<resources>
    <string name="app_name">GoodWeather</string>
    <string name="cityLabel">City</string>
    <string name="defaultCity">Moscow</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="afterTomorrow">After tomorrow</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="newYork">New York</string>
    <string name="addInfo">Show additional info</string>
    <string name="wind">Wind speed</string>
    <string name="pressure">Atm. pressure</string>
    <string name="selectCityBtnText">Select city</string>
    <string name="selectedCityText">Selected city:</string>
    <string name="themeSelectorText">Theme</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="updateOnStart">Update on start app</string>
    <string name="updateInBackgorund">Update in background</string>
    <string name="loadThemesBtn">Load themes</string>
    <string name="saveBtnText">Save</string>
    <string name="defaultBtnText">Load default</string>
    <string name="weather_picture">Weather picture</string>
    <string name="updateDataButtonText">Update</string>
    <string name="windValue">10</string>
    <string name="pressureValue">760</string>
    <string name="yandexWeatherBtnText">Ya.Weather</string>
    <string name="default_temperature" translatable="false">...</string>
    <string name="show_weather">Show weather</string>
    <string name="delete">Delete</string>
    <string name="addButtonText">Add</string>
    <string name="addDialogTitle">Add city</string>
    <string name="addDialogHint">City Name</string>
    <string name="addDialogEmptyError">Empty string entered</string>
    <string name="addDialogAlreadyAddedError">City already added</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deleteQuestion">will be deleted!</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="about_developer">About developer</string>
    <string name="reply">Reply</string>
    <string name="nav_header_title">Geek University Android-developing faculty</string>
    <string name="nav_header_subtitle" translatable="false">geekbrains.ru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="developer">Korotkov Alexey</string>
    <string name="dev_email" translatable="false">korotkov.aleksei@gmail.com</string>
    <string name="send">Send</string>
    <string name="data_updated">data is updated</string>
    <string name="error_getting_data">data getting error</string>
    <string name="data_updating">Updating data</string>
    <string name="city_not_foud">City not found</string>
    <string name="dots" translatable="false">...</string>
    <string name="search">Search</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="token">Token</string>
    <string name="new_token_msg">Got new token. Stored in "Settings"</string>
    <string name="error_need_permission">Need permissions to continue</string>
    <string name="current_location">Current location</string>
    <string name="map">Map</string>
    <string name="logged_in">Logged in</string>
    <string name="sign_out">Sign out</string>
    <string name="logged_out">Logged out</string>
</resources>