<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themeSelectorText"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/settings_theme_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/settings_light_theme_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lightTheme" />

        <RadioButton
            android:id="@+id/settings_dark_theme_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/darkTheme" />
    </RadioGroup>


    <CheckBox
        android:id="@+id/settings_update_on_start_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateOnStart" />

    <CheckBox
        android:id="@+id/settings_update_in_back_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateInBackgorund" />

    <Button
        android:id="@+id/defaultBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultBtnText" />
</LinearLayout>