<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultCity"
        android:textColor="#4CAF50"
        style="@style/LargeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.goodweather.custom.TemperatureView
        android:id="@+id/temperatureView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/temperature"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toTopOf="@+id/temperature" />

    <TextView
        android:id="@+id/temperature"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_temperature"
        android:textColor="@color/colorTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temperatureView"
        app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_info_50"
        android:scaleType="centerInside"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/weatherIconProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <TextView
        android:id="@+id/weatherDescription"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dots"
        android:textColor="@color/design_default_color_secondary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

    <CheckBox
        android:id="@+id/addInfoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/addInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_list_view" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInfoCheckBox" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/windTextView"
        app:layout_constraintTop_toBottomOf="@+id/windTextView" />

    <TextView
        android:id="@+id/windValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/windValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/windTextView" />

    <TextView
        android:id="@+id/pressureValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/pressureValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pressureTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateDataButtonText"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:icon="@drawable/ic_baseline_refresh_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yandexWeatherBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/yandexWeatherBtnText"
            app:icon="@drawable/umbrella_red"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:iconSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>